<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MonitorMenu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/start_the_monitoring_process"
        android:id="@+id/textView2"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />


<!--    <EditText-->
<!--        android:id="@+id/emailEditText"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/enter_your_email"-->
<!--        android:paddingTop="20dp"-->
<!--        android:layout_below="@+id/textView2"-->
<!--        android:inputType="textEmailAddress"/>-->

<!--    <Button-->
<!--        android:id="@+id/agree"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/agree"-->
<!--        android:layout_below="@id/emailEditText"-->
<!--        android:layout_marginTop="16dp"/>-->



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/time_senstivity"
        android:id="@+id/textView16"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar2"
        android:max="8"
        android:progress="4"
        android:layout_below="@+id/textView16"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/low"
        android:id="@+id/textView17"
        android:layout_below="@+id/seekBar2"
        android:layout_alignEnd="@+id/seekBar2" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView17"
        android:layout_centerHorizontal="true"
        android:text="@string/medium"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/high"
        android:id="@+id/textView19"
        android:layout_below="@+id/seekBar2"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView19"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp"
        android:text="@string/alarm_will_invoke_after"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView15"
        android:layout_toEndOf="@+id/textView15"
        android:layout_marginStart="4dp"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#7C4DFF" />

    <br.com.bloder.magic.view.MagicButton
        android:id="@+id/magic_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        app:button_icon="@drawable/logo_main"
        app:button_icon_height="45dp"
        app:button_icon_width="56dp"
        app:hide_text="Start"
        app:hide_text_color="@android:color/black"
        app:hide_text_size="16sp"
        app:magic_button_size="80dp" />

</RelativeLayout>
